refactor: login flow